Add user select mixins

--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -2,3 +2,11 @@ $panel-background-color: #EFEFEF;
 $panel-border-color: #D8D7D7;
 $panel-shadow-color: #B0B0B0;
 $accent-color: #7ED321;
+
+@mixin user-select-off () {
+	user-select: none;
+}
+
+@mixin user-select-on () {
+	user-select: auto;
+}
