Create variable for header grey text

--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -1,6 +1,7 @@
 $panel-background-color: #EFEFEF;
 $panel-border-color: #D8D7D7;
 $panel-shadow-color: #B0B0B0;
+$panel-grey-text: #6F6F6F;
 $accent-color: #7ED321;
 
 @mixin user-select-off () {
