Add a variable for the faded grey colour

--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -3,6 +3,7 @@ $panel-border-color: #D8D7D7;
 $panel-shadow-color: #B0B0B0;
 $panel-grey-text: #6F6F6F;
 $accent-color: #7ED321;
+$faded-color: #9B9B9B;
 
 @mixin user-select-off () {
 	user-select: none;
