Fix tag line height

--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -29,6 +29,7 @@ body {
 .tag {
 	display: inline-block;
 	text-transform: uppercase;
+	line-height: normal;
 	border-radius: 0.50rem;
 	padding: 0.25rem 0.35rem;
 	background: #E4E4E4;
