--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -59,6 +59,7 @@ button {
 	margin: 0 1.00rem;
 	outline: 0;
 	cursor: pointer;
+	@include user-select-off();
 
 	&.primary {
 		background: $accent-color;
