--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -1,3 +1,5 @@
+$font-color-dark: black;
+$font-color-light: white;
 $panel-background-color: #EFEFEF;
 $panel-border-color: #D8D7D7;
 $panel-shadow-color: #B0B0B0;
