--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -79,3 +79,93 @@ button {
 		margin-right: 0;
 	}
 }
+
+/*
+ * Loader.
+ */
+.loading-container {
+	position: absolute;
+	display: none;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	background: rgba(100, 100, 100, 0.30);
+
+	> .loader,
+	> .loader:before,
+	> .loader:after {
+		background: #333;
+		-webkit-animation: load-anim-1 1s infinite ease-in-out;
+		animation: load-anim-1 1s infinite ease-in-out;
+		width: 1.00em;
+		height: 4.00em;
+	}
+
+	> .loader {
+		color: #333;
+		text-indent: -9999em;
+		margin: auto;
+		position: relative;
+		font-size: 18px;
+		-webkit-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-animation-delay: -0.16s;
+		animation-delay: -0.16s;
+	}
+
+	> .loader:before,
+	> .loader:after {
+		position: absolute;
+		top: 0;
+		content: '';
+	}
+
+	> .loader:before {
+		left: -1.50em;
+		-webkit-animation-delay: -0.32s;
+		animation-delay: -0.32s;
+	}
+
+	> .loader:after {
+		left: 1.50em;
+	}
+}
+
+.loading {
+	> .loading-container {
+		display: flex;
+	}
+
+	> *:not(.loading-container) {
+		filter: blur(2px);
+	}
+}
+
+@-webkit-keyframes load-anim-1 {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 0;
+		height: 4.00em;
+	}
+	40% {
+		box-shadow: 0 -2.00em;
+		height: 5.00em;
+	}
+}
+
+@keyframes load-anim-1 {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 0;
+		height: 4.00em;
+	}
+	40% {
+		box-shadow: 0 -2.00em;
+		height: 5.00em;
+	}
+}
