--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -43,6 +43,21 @@ body {
 }
 
 /*
+ * Forms.
+ */
+input,
+textarea {
+	padding: 0.50rem;
+	border-radius: 0.25rem;
+	border: 1px solid $panel-border-color;
+
+	&:focus {
+		outline: 0;
+		border-color: $accent-color;
+	}
+}
+
+/*
  * Buttons.
  */
 
