--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -6,6 +6,7 @@ $panel-shadow-color: #B0B0B0;
 $panel-grey-text: #6F6F6F;
 $accent-color: #7ED321;
 $faded-color: #9B9B9B;
+$blue-color: #0683FF;
 
 @mixin user-select-off () {
 	user-select: none;
