Style all links the same

--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -27,6 +27,15 @@ body {
 	overflow: auto;
 }
 
+a {
+	color: $blue-color;
+	text-decoration: underline;
+
+	&:hover {
+		opacity: 0.80;
+	}
+}
+
 .lock-scrolling {
 	overflow: hidden !important;
 }
