--- a/app/frontend/source/views/home.handlebars.html
+++ b/app/frontend/source/views/home.handlebars.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Eyewitness UI</title>
+  <title>{{pageTitle}}</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
 </head>
@@ -15,6 +15,6 @@
   <script>
     var APP_CONFIG = {{{appConfig}}};
   </script>
-  
+
 </body>
 </html>
