Fix hover colour of threads

--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -4,6 +4,7 @@ $blue-color: #0683FF;
 $font-color-dark: black;
 $font-color-light: white;
 $panel-background-color: #EFEFEF;
+$panel-hover-color: #E8E7E7;
 $panel-border-color: #D8D7D7;
 $panel-shadow-color: #B0B0B0;
 $panel-grey-text: #6F6F6F;
