Move red colour into a variable

--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -1,6 +1,7 @@
 $accent-color: #7ED321;
 $faded-color: #9B9B9B;
 $blue-color: #0683FF;
+$red-color: #d6411e;
 $font-color-dark: black;
 $font-color-light: white;
 $panel-background-color: #EFEFEF;
