--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -148,7 +148,7 @@ button {
 	 left: 0;
 	 right: 1rem;
 	 background-color: #fed;
-	 padding: 0.5rem;
+	 padding: 0;
 	 padding-left: 2rem;
 	 padding-right: 1rem;
 	 display: flex;
@@ -159,7 +159,8 @@ button {
 
 	 .actions {
 		 flex: 1;
-		 margin: 0.5rem;
+		 margin-left: 0.5rem;
+		 margin-right: 0.5rem;
 	 }
  }
 
