--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -155,12 +155,15 @@ button {
 
 	 p {
 		 flex: 11;
+		 margin: 0.6rem;
 	 }
 
 	 .actions {
 		 flex: 1;
 		 margin-left: 0.5rem;
 		 margin-right: 0.5rem;
+		 margin-top: 0.3rem;
+		 margin-bottom: 0.3rem;
 	 }
  }
 
