--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -141,31 +141,48 @@ button {
 /*
  * Saving.
  */
- .unsaved-warning {
-	 font-weight: bold;
-	 position: fixed;
-	 bottom: 0;
-	 left: 0;
-	 right: 1rem;
-	 background-color: #fed;
-	 padding: 0;
-	 padding-left: 2rem;
-	 padding-right: 1rem;
-	 display: flex;
+.unsaved-warning {
+	font-weight: bold;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 1rem;
+	background-color: #fed;
+	padding: 0;
+	padding-left: 2rem;
+	padding-right: 1rem;
+	display: flex;
 
-	 p {
-		 flex: 11;
-		 margin: 0.6rem;
-	 }
+	p {
+		flex: 11;
+		margin: 0.6rem;
+	}
 
-	 .actions {
-		 flex: 1;
-		 margin-left: 0.5rem;
-		 margin-right: 0.5rem;
-		 margin-top: 0.3rem;
-		 margin-bottom: 0.3rem;
-	 }
- }
+	.actions {
+		flex: 1;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
+		margin-top: 0.3rem;
+		margin-bottom: 0.3rem;
+	}
+}
+
+/*
+ * Dialog boxes.
+ */
+
+dialog {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 6px;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	min-width: calc(50vw);
+
+	h1 {
+		margin: 0;
+		border-bottom: 1px solid #bbb;
+		margin-bottom: 1rem;
+	}
+}
 
 /*
  * Loader.
