--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -5,14 +5,18 @@ $red-color: #d6411e;
 $font-color-dark: black;
 $font-color-light: white;
 $panel-background-color: #EFEFEF;
+$panel-background-color-white: #FFFFFF;
 $panel-hover-color: #E8E7E7;
 $panel-border-color: #D8D7D7;
+$panel-border-color-grey: #E7E7E7;
 $panel-shadow-color: #B0B0B0;
 $panel-grey-text: #6F6F6F;
 $tag-off-background-color: #E4E4E4;
 $tag-off-font-color: #B6B6B6;
 $tag-on-background-color: $accent-color;
 $tag-on-font-color: white;
+
+$hippocamp-pink: #E62565;
 
 @mixin user-select-off () {
 	user-select: none;
