--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -4,6 +4,7 @@ $blue-color: #0683FF;
 $red-color: #d6411e;
 $font-color-dark: black;
 $font-color-light: white;
+$background-color: #F8F8F8;
 $panel-background-color: #EFEFEF;
 $panel-background-color-white: #FFFFFF;
 $panel-hover-color: #E8E7E7;
