--- a/app/frontend/source/styles/variables.scss
+++ b/app/frontend/source/styles/variables.scss
@@ -17,7 +17,7 @@ $tag-off-font-color: #B6B6B6;
 $tag-on-background-color: $accent-color;
 $tag-on-font-color: white;
 
-$hippocamp-pink: #E62565;
+$brand-main-color: #2b4b81;
 
 @mixin user-select-off () {
 	user-select: none;
