--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -21,7 +21,7 @@ body {
 }
 
 body {
-	background: #D8D7D7;
+	background: #F8F8F8;
 	margin: 0;
 	padding: 0;
 	overflow: auto;
@@ -66,7 +66,7 @@ textarea {
 
 	&:focus {
 		outline: 0;
-		border-color: $accent-color;
+		border-color: #D8D7D7;
 	}
 }
 
@@ -79,19 +79,23 @@ button {
 	line-height: 2.50rem;
 	border-radius: 0.20rem;
 	padding: 0;
-	padding-left: 0.50rem;
-	padding-right: 0.50rem;
+	padding-left: 1.2rem;
+	padding-right: 1.2rem;
 	background: $brand-main-color;
 	color: white;
 	text-align: center;
 	border: 1px solid $brand-main-color;
 	border-radius: 20px;
-	margin: 0 0.50rem;
+	margin: 0 0.3rem;
 	outline: 0;
 	cursor: pointer;
 	font-size: 15px;
 	transition: all ease-in-out 200ms;
 	@include user-select-off();
+
+	&:hover {
+		background-color: darken($brand-main-color, 10%);
+	}
 
 	&.shrunk {
 		width: auto;
@@ -132,20 +136,15 @@ button {
 		}
 	}
 
-	&:hover {
-		background-color: darken($brand-main-color, 10%);
-	}
-
-	&:first-child {
-		margin-left: 0;
-	}
-
-	&:last-child {
-		margin-right: 0;
-	}
-
 	&:disabled {
 		background-color: #ddd;
+		border: none;
+		color: darken(#ddd, 30%);
+
+		&:hover {
+			background-color: #ddd;
+			cursor: unset; 
+		}
 	}
 }
 
@@ -185,13 +184,29 @@ button {
 dialog {
 	border: 1px solid rgba(0, 0, 0, 0.3);
 	border-radius: 6px;
-	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.12);
 	min-width: calc(50vw);
+	max-width: 820px;
 
 	h1 {
-		margin: 0;
 		border-bottom: 1px solid #bbb;
-		margin-bottom: 1rem;
+		margin: 0;
+		margin-bottom: 1.5rem;
+		font-size: 28px;
+		font-weight: 500;
+	}
+
+	p {
+		font-size: 1.30rem;
+		margin: 0;
+		font-size: 15px;
+		color: #9c9c9c;
+		font-weight: 400;
+	}
+
+	.actions {
+		display: flex;
+		justify-content: flex-end;
 	}
 }
 
