--- a/app/frontend/source/styles/main.scss
+++ b/app/frontend/source/styles/main.scss
@@ -36,6 +36,15 @@ a {
 	}
 }
 
+select {
+	border-radius: 0.25rem;
+	border: 1px solid #D8D7D7;
+	background: white;
+	height: 36px;
+	min-width: 264px;
+	margin-right: 10px;
+}
+
 /*
  * Tags.
  */
@@ -165,6 +174,7 @@ button {
 	font-size: 15px;
 	font-weight: 500;
 	height: 42px;
+	z-index: 1;
 
 	p {
 		flex: 11;
